cmake_minimum_required( VERSION 3.10 )

project( axl.util VERSION 1.2.7 DESCRIPTION "A simple C++ utilities library." )

if( "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}" )
	set( AXLUTIL_STANDALONE TRUE )
else()
	set( AXLUTIL_STANDALONE FALSE )
endif()

set( CMAKE_CXX_STANDARD 11 CACHE STRING "C++ compiler standard.")
set( CMAKE_CXX_STANDARD_REQUIRED TRUE CACHE BOOL "")
set( AXLUTIL_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include" CACHE PATH "axl.util main include directory" )
set( AXLUTIL_RUNTIME_DIR "${PROJECT_BINARY_DIR}/bin" CACHE PATH "Binary directory path." )
set( AXLUTIL_ARCHIVE_DIR "${PROJECT_BINARY_DIR}/lib" CACHE PATH "archive library directory path." )
set( AXLUTIL_INSTALL_HEADERS ${AXLUTIL_STANDALONE} CACHE BOOL "" )
set( AXLUTIL_INSTALL_ARCHIVES ${AXLUTIL_STANDALONE} CACHE BOOL "" )
set( AXLUTIL_INSTALL_BINARIES ${AXLUTIL_STANDALONE} CACHE BOOL "" )
set( AXLUTIL_BUILD_TESTS ${AXLUTIL_STANDALONE} CACHE BOOL "" )
set( CMAKE_BUILD_TYPE "Debug" CACHE STRING "" )
set( AXLUTIL_TYPE STATIC CACHE STRING "Library type." )

add_subdirectory( src "axl.util" )
if( AXLUTIL_BUILD_TESTS )
	add_subdirectory( tests "axl.util.tests" )
endif()
